--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,22 @@
+contourpy==1.3.1
+cycler==0.12.1
+fonttools==4.56.0
+kiwisolver==1.4.8
+loguru==0.7.3
+matplotlib==3.10.1
+mypy==1.15.0
+mypy-extensions==1.0.0
+numpy==2.2.4
+packaging==24.2
+pandas==2.2.3
+pandas-stubs==2.2.3.250308
+pillow==11.1.0
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
+six==1.17.0
 toml==0.10.2
+types-pytz==2025.1.0.20250204
+types-toml==0.10.8.20240310
+typing_extensions==4.12.2
+tzdata==2025.1
