--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 contourpy==1.3.1
 cycler==0.12.1
+filelock==3.18.0
 fonttools==4.56.0
+fsspec==2025.3.0
+Jinja2==3.1.6
+joblib==1.4.2
 kiwisolver==1.4.8
 loguru==0.7.3
+MarkupSafe==3.0.2
 matplotlib==3.10.1
+mpmath==1.3.0
 mypy==1.15.0
 mypy-extensions==1.0.0
+networkx==3.4.2
 numpy==2.2.4
 packaging==24.2
 pandas==2.2.3
@@ -14,9 +21,16 @@ pillow==11.1.0
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
+scikit-learn==1.6.1
+scipy==1.15.2
 six==1.17.0
+sympy==1.13.1
+threadpoolctl==3.6.0
 toml==0.10.2
+torch==2.6.0
+tqdm==4.67.1
 types-pytz==2025.1.0.20250204
 types-toml==0.10.8.20240310
 typing_extensions==4.12.2
 tzdata==2025.1
+xgboost==3.0.0
