--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,31 @@
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+bayesian-optimization==1.4.3
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
+fastapi==0.115.11
 filelock==3.18.0
 fonttools==4.56.0
+frozenlist==1.5.0
 fsspec==2025.3.0
+h11==0.14.0
+idna==3.10
 Jinja2==3.1.6
 joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 kiwisolver==1.4.8
 loguru==0.7.3
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 mpmath==1.3.0
+msgpack==1.1.0
 mypy==1.15.0
 mypy-extensions==1.0.0
 networkx==3.4.2
@@ -18,13 +34,25 @@ packaging==24.2
 pandas==2.2.3
 pandas-stubs==2.2.3.250308
 pillow==11.1.0
+protobuf==6.30.1
+pyarrow==19.0.1
+pydantic==2.10.6
+pydantic_core==2.27.2
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
+PyYAML==6.0.2
+ray==2.44.0
+referencing==0.36.2
+requests==2.32.3
+rpds-py==0.23.1
 scikit-learn==1.6.1
 scipy==1.15.2
 six==1.17.0
+sniffio==1.3.1
+starlette==0.46.1
 sympy==1.13.1
+tensorboardX==2.6.2.2
 threadpoolctl==3.6.0
 toml==0.10.2
 torch==2.6.0
@@ -33,4 +61,6 @@ types-pytz==2025.1.0.20250204
 types-toml==0.10.8.20240310
 typing_extensions==4.12.2
 tzdata==2025.1
+urllib3==2.3.0
+uvicorn==0.34.0
 xgboost==3.0.0
